--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-TEST
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Automatic Entrepreneur</title>
+
+</head>
+
+<body>
+  <script async src="https://cse.google.com/cse.js?cx=336523b06c04940bf">
+    </script>
+    <div class="gcse-search"></div>
+</body>
+</html>
