Write the mission statement report if its there - not tested

--- a/test.html
+++ b/test.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title>Softwire Technology Limited Summary</title>
+<title>Google Uk Limited Summary</title>
 </head>
 <body style='margin-right:250px;margin-left:250px;'>
 <br style='line-height:0px'><h1 style='text-align:left;'>
-						Softwire Technology Limited Summary
+						Google Uk Limited Summary
 						<span style='float:right;font-size:20px'>
 						<span style='color:#4285F4'>A</span>
 						<span style='color:#DB4437'>u</span>
@@ -37,39 +37,12 @@
 	.grid-item	{
 	padding: 10px;
 	text-align: center;
-	}	</style><div class="grid-container"><div class="grid-item">Software Development</div><div class="grid-item">201 to 500 Employees</div><div class="grid-item">Founded in 2000</div><div class="grid-item">Glassdoor rating: 4.8</div><div class="grid-item">CEO: Andrew Thomas</div></div><h3>Report summary</h3>
-<p>The directors present their annual report and financial statements for the year ended 31 December 2020. The principal activity of the company and group continued to be that of computer software development. Ordinary dividends were paid amounting to £2,377,000. The directors do not recommend payment of a further dividend. Taylor Associates were appointed auditor to the group. A resolution proposing that they be re-appointed will be put at a General Meeting.
+	}	</style><div class="grid-container"><div class="grid-item">N/A</div><div class="grid-item">N/A</div><div class="grid-item">Founded in N/A</div><div class="grid-item">Glassdoor rating: 4.5</div><div class="grid-item">CEO: </div></div><h3>Report summary</h3>
+<p>The directors present their annual report and financial statements for the year ended 31 December 2020. The principal activity of the company and group continued to be that of computer software development. Ordinary dividends were paid amounting to ï¿½2,377,000. The directors do not recommend payment of a further dividend. Taylor Associates were appointed auditor to the group. A resolution proposing that they be re-appointed will be put at a General Meeting.
 
 </p>
 <h4>FAQ</h4>
 <p>Question: Who bought the company this year?<br>Answer: Withani Limited</p>
-<br>
-<br>
-<div style='display:flex'>
-<img src=03824658_ProfitLoss.png alt=03824658_ProfitLoss.png width='500'>
-<div><p>2016-2018: profit decreased sharply by 24.5% per year from 2,800,000.0 to 1,430,000.0 GBP.</p>
-<p>2018-2020: profit increased dramatically by 140.0% per year from 1,430,000.0 to 5,430,000.0 GBP.</p>
-<p>2020-2021: profit decreased sharply by 56.6% per year from 5,430,000.0 to 2,360,000.0 GBP.</p>
-</div>
-</div>
-<br>
-<br>
-<div style='display:flex'>
-<img src=03824658_FixedAssets.png alt=03824658_FixedAssets.png width='500'>
-<div><p>2016-2017: value increased sharply by 21.3% per year from 644,000.0 to 781,000.0 GBP.</p>
-<p>2017-2021: value decreased gradually by 11.8% per year from 781,000.0 to 413,000.0 GBP.</p>
-</div>
-</div>
-<br>
-<br>
-<div style='display:flex'>
-<img src=03824658_CurrentAssets.png alt=03824658_CurrentAssets.png width='500'>
-<div><p>2016-2017: value increased sharply by 24.2% per year from 5,900,000.0 to 7,330,000.0 GBP.</p>
-<p>2017-2018: value decreased gradually by 11.0% per year from 7,330,000.0 to 6,520,000.0 GBP.</p>
-<p>2018-2020: value increased sharply by 47.4% per year from 6,520,000.0 to 12,700,000.0 GBP.</p>
-<p>2020-2021: value decreased gradually by 7.8% per year from 12,700,000.0 to 11,700,000.0 GBP.</p>
-</div>
-</div>
 <br>
 <br>
 </body>
