--- a/test.html
+++ b/test.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-<title>Google Uk Limited Summary</title>
+<title>Softwire Technology Limited Summary</title>
+<style>.only-print {margin-right:250px;margin-left:250px;}@media print {.only-print {margin-right:0px;margin-left:0px;}}</style>
 </head>
-<body style='margin-right:250px;margin-left:250px;'>
+<body class='only-print' >
 <br style='line-height:0px'><h1 style='text-align:left;'>
-						Google Uk Limited Summary
+						Softwire Technology Limited Summary
 						<span style='float:right;font-size:20px'>
 						<span style='color:#4285F4'>A</span>
 						<span style='color:#DB4437'>u</span>
@@ -37,13 +38,41 @@
 	.grid-item	{
 	padding: 10px;
 	text-align: center;
-	}	</style><div class="grid-container"><div class="grid-item">N/A</div><div class="grid-item">N/A</div><div class="grid-item">Founded in N/A</div><div class="grid-item">Glassdoor rating: 4.5</div><div class="grid-item">CEO: </div></div><h3>Report summary</h3>
-<p>The directors present their annual report and financial statements for the year ended 31 December 2020. The principal activity of the company and group continued to be that of computer software development. Ordinary dividends were paid amounting to ï¿½2,377,000. The directors do not recommend payment of a further dividend. Taylor Associates were appointed auditor to the group. A resolution proposing that they be re-appointed will be put at a General Meeting.
+	}	</style><div class="grid-container"><div class="grid-item">N/A</div><div class="grid-item">N/A</div><div class="grid-item">Founded in N/A</div><div class="grid-item">Glassdoor rating: N/A</div><div class="grid-item">CEO: N/A</div></div><h3>Report summary</h3>
+<p>The directors present their annual report and financial statements for the year ended 31 December 2020. The principal activity of the company and group continued to be that of computer software development. Ordinary dividends were paid amounting to £2,377,000. The directors who held office during the year and up to the date of signature of the financial statements were as follows: Taylor Associates were appointed auditor to the group and in accordance with section 485 of the Companies Act 2006, a resolution proposing that they be re-appointed will be put at a General Meeting.
 
 </p>
 <h4>FAQ</h4>
-<p>Question: Who bought the company this year?<br>Answer: Withani Limited</p>
+<p>Question: Who bought Softwire Technology Limited this year?<br>Answer: Withani Limited<br><br>Question: Has Softwire Technology Limited made any charitable donations (and how much)?<br>Answer: £38,000</p>
 <br>
 <br>
+<div style='display:flex'>
+<img src=03824658_ProfitLoss.png alt=03824658_ProfitLoss.png width='500'>
+<div><p>2016-2018: profit decreased sharply by 24.5% per year from 2,800,000.0 to 1,430,000.0 GBP.</p>
+<p>2018-2020: profit increased dramatically by 140.0% per year from 1,430,000.0 to 5,430,000.0 GBP.</p>
+<p>2020-2021: profit decreased sharply by 56.6% per year from 5,430,000.0 to 2,360,000.0 GBP.</p>
+</div>
+</div>
+<br>
+<br>
+<div style='display:flex'>
+<img src=03824658_FixedAssets.png alt=03824658_FixedAssets.png width='500'>
+<div><p>2016-2017: value increased sharply by 21.3% per year from 644,000.0 to 781,000.0 GBP.</p>
+<p>2017-2021: value decreased gradually by 11.8% per year from 781,000.0 to 413,000.0 GBP.</p>
+</div>
+</div>
+<br>
+<br>
+<div style='display:flex'>
+<img src=03824658_CurrentAssets.png alt=03824658_CurrentAssets.png width='500'>
+<div><p>2016-2017: value increased sharply by 24.2% per year from 5,900,000.0 to 7,330,000.0 GBP.</p>
+<p>2017-2018: value decreased gradually by 11.0% per year from 7,330,000.0 to 6,520,000.0 GBP.</p>
+<p>2018-2020: value increased sharply by 47.4% per year from 6,520,000.0 to 12,700,000.0 GBP.</p>
+<p>2020-2021: value decreased gradually by 7.8% per year from 12,700,000.0 to 11,700,000.0 GBP.</p>
+</div>
+</div>
+<br>
+<br>
+<a href='javascript:if(window.print)window.print()'>create pdf</a>
 </body>
 </html>
